dataset1235/2025-2/2868285114/users/1072499734/executions/3649835072_3691284457.log
== SUBMISSION (2025-08-27 01:56:40)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:34:38)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:54:41)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:56:32)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:53:35)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:53:36)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:56:33)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
None
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
None
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
None
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
None
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
None
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:31:36)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:57:45)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
None
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
None
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
None
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
None
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
None
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:34:37)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:56:06)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:56:39)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:57:44)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:31:47)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:55:29)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))
peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4
pt = peso1 + peso2 + peso3 + peso4
nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4
media = (nt)/pt
print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:32:29)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:30:55)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4
media = (nt)/pt
print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:57:45)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:56:04)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:56:31)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:58:10)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(input(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:31:35)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:35:41)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:55:30)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))
peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4
pt = peso1 + peso2 + peso3 + peso4
nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4
media = (nt)/pt
print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:30:57)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4
media = (nt)/pt
print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:35:40)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:34:36)
-- CODE: 
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(inout(""))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

pt = peso1 + peso2 + peso3 + peso4

nt= nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

media = (nt)/pt

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4 = float(inout(""))
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
